--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "backend graphsql app",
+  "description": "backend graphql mongodb mongoose app",
   "main": "index.js",
   "author": "Khayal Isakhanov",
   "license": "ISC",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/node": "^7.15.4",
     "babel-plugin-module-resolver": "^4.1.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.6.0",
