readmy and env.example changed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,4 @@
-MONGODB_URI=mongodb+srv://myusername:mypassword@cluster0.orzws.mongodb.net/appdb?retryWrites=true&w=majority
+# get MONGODB url by pressing connect button in mongo db atlas account
+# if db connection throws error, give all ip address access in atlas account to test IP access
+MONGODB_URI=mongodb+srv://myusername:mypassword@mycluster.orzws.mongodb.net/appdb?retryWrites=true&w=majority
 PORT=5000
