--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "author": "Khayal Isakhanov",
   "license": "ISC",
   "scripts": {
-    "start": "nodemon --watch app --exec babel-node app --out-dir dist",
+    "start": "nodemon --watch app --exec babel-node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
