--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,17 @@ node_modules/
 */.env
 */.env.test
 */.env.production
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+*/npm-debug.log*
+*/yarn-debug.log*
+*/yarn-error.log*
